--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,10 @@ body {
   margin: 0;
   min-width: 320px;
   min-height: 100vh;
+  font-family: "Inter", "Roboto", sans-serif;
+  font-size: 16px;
 }
-body *{
+
+body * {
   box-sizing: border-box;
 }
