--- a/src/variables.scss
+++ b/src/variables.scss
@@ -1,5 +1,6 @@
 $color-primary: #4f46e5;
 $color-secondary: #06b6d4;
+$color-bg-blur: #f8fafc85;
 $color-bg: #f8fafc;
 $color-dark: #1e293b;
 $color-light: #ffffff;
