--- a/src/index.scss
+++ b/src/index.scss
@@ -1,9 +1,12 @@
+@import "./variables";
+
 body {
   margin: 0;
   min-width: 320px;
   min-height: 100vh;
-  font-family: "Inter", "Roboto", sans-serif;
+  font-family: $font-family-base;
   font-size: 16px;
+  color: $color-dark;
 }
 
 body * {
