--- a/src/pages/anonymousPage/anonymous.module.scss
+++ b/src/pages/anonymousPage/anonymous.module.scss
@@ -13,4 +13,17 @@
       flex: 1;
     }
   }
+  .authContainer{
+   display: flex;
+   flex-direction: column;
+   align-items: center;
+   .authButtons{
+    display: flex;
+    gap: 16px;
+    margin-top: 24px;
+    button{
+      width: 120px;
+    }
+   }
+  }
 }
