--- a/src/pages/home/home.module.scss
+++ b/src/pages/home/home.module.scss
@@ -1,3 +1,18 @@
-.home{
-    
+.home {
+  padding: 24px;
+  display: flex;
+  flex-direction: column;
+  gap: 24px;
+  .filterWrapper {
+    display: flex;
+    gap: 16px;
+  }
+  .dealsList {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 8px;
+    > * {
+      flex: 0 1 calc(25% - 8px);
+    }
+  }
 }
