--- a/src/components/organisms/loader/loader.module.scss
+++ b/src/components/organisms/loader/loader.module.scss
@@ -12,7 +12,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-
+  z-index: 10;
   .loader {
     display: flex;
     align-items: center;
